compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__function_with_aliased_function_type.snap
---
source: compiler-core/src/package_interface/tests.rs
assertion_line: 231
expression: "\n\npub type F = fn(Int) -> Int\npub fn foo(x: F) -> Int { x 1 }\n"
snapshot_kind: text
---
{
  "name": "my_package",
  "version": "11.10.9-1.wibble+build",
  "gleam-version-constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type-aliases": {
        "F": {
          "documentation": null,
          "deprecation": null,
          "parameters": 0,
          "alias": {
            "kind": "fn",
            "parameters": [
              {
                "kind": "named",
                "name": "Int",
                "package": "",
                "module": "gleam",
                "parameters": []
              }
            ],
            "return": {
              "kind": "named",
              "name": "Int",
              "package": "",
              "module": "gleam",
              "parameters": []
            }
          }
        }
      },
      "types": {},
      "constants": {},
      "functions": {
        "foo": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses-erlang-externals": false,
            "uses-javascript-externals": false,
            "can-run-on-erlang": true,
            "can-run-on-javascript": true
          },
          "parameters": [
            {
              "label": null,
              "type": {
                "kind": "fn",
                "parameters": [
                  {
                    "kind": "named",
                    "name": "Int",
                    "package": "",
                    "module": "gleam",
                    "parameters": []
                  }
                ],
                "return": {
                  "kind": "named",
                  "name": "Int",
                  "package": "",
                  "module": "gleam",
                  "parameters": []
                }
              }
            }
          ],
          "return": {
            "kind": "named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      }
    }
  }
}
