compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__imported_type.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\nimport other_module.{type Element}\npub fn main() -> Element(Int) {}\n"
---
{
  "name": "my_package",
  "package_version": {
    "major": 11,
    "minor": 10,
    "patch": 9,
    "pre": [
      {
        "kind": "Numeric",
        "value": 1
      },
      {
        "kind": "Alphanumeric",
        "value": "foo"
      }
    ],
    "build": "build"
  },
  "gleam_version_constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type_aliases": {},
      "types": {},
      "constants": {},
      "functions": {
        "main": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses_erlang_externals": false,
            "uses_javascript_externals": false
          },
          "parameters": [],
          "return": {
            "kind": "Named",
            "name": "Element",
            "package": "other_package",
            "module": "other_module",
            "parameters": [
              {
                "kind": "Named",
                "name": "Int",
                "package": "",
                "module": "gleam",
                "parameters": []
              }
            ]
          }
        }
      }
    }
  }
}
