compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__internal_modules_are_not_exported.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "pub fn main() { 1 }"
---
{
  "name": "my_package",
  "package_version": "11.11.11",
  "gleam_version_constraint": "1.0.0",
  "modules": {}
}
