compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__opaque_constructors_are_not_exposed.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "pub opaque type Foo { Bar }"
---
{
  "name": "my_package",
  "version": "11.10.9-1.foo+build",
  "gleam_version_constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type_aliases": {},
      "types": {
        "Foo": {
          "documentation": null,
          "deprecation": null,
          "parameters": 0,
          "constructors": []
        }
      },
      "constants": {},
      "functions": {}
    }
  }
}
