compiler-core/src/package_interface/snapshots/gleam_core__package_interface__tests__prelude_types.snap
---
source: compiler-core/src/package_interface/tests.rs
expression: "\npub const float = 1.1\npub const string = \"\"\npub const int = 1\npub const bool = True\n"
---
{
  "name": "my_package",
  "package_version": "11.11.11",
  "gleam_version_constraint": "1.0.0",
  "modules": {
    "my/module": {
      "documentation": [],
      "type_aliases": {},
      "types": {},
      "constants": {
        "bool": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses_erlang_externals": false,
            "uses_javascript_externals": false
          },
          "type": {
            "kind": "Named",
            "name": "Bool",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "float": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses_erlang_externals": false,
            "uses_javascript_externals": false
          },
          "type": {
            "kind": "Named",
            "name": "Float",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "int": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses_erlang_externals": false,
            "uses_javascript_externals": false
          },
          "type": {
            "kind": "Named",
            "name": "Int",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        },
        "string": {
          "documentation": null,
          "deprecation": null,
          "implementations": {
            "gleam": true,
            "uses_erlang_externals": false,
            "uses_javascript_externals": false
          },
          "type": {
            "kind": "Named",
            "name": "String",
            "package": "",
            "module": "gleam",
            "parameters": []
          }
        }
      },
      "functions": {}
    }
  }
}
